# jane-street-puzzle

./: .gitattributes  README.md  deduplicate_variables.py  disassembly.py  disassembly_types.py  find_reductions.py  find_unused_variables.py  model_3_11.safetensors  pyproject.toml  solve_activation_domains_reduced.py  solve_entire_network.py
generated_data/: bounds.txt  max_out_value_map.py  reduced_variables.pickle  reductions.json  remap_equivalent_variables.json  used_variables.json  variables.pickle
