[project]
name = "jane-street-puzzle"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.3",
    "networkx>=3.4.2",
    "ortools>=9.12.4544",
    "pydantic>=2.11.4",
    "safetensors>=0.5.3",
    "tqdm>=4.67.1",
]
